# serializer version: 1
# name: test_all_entities[sensor.rando_bank_checking_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_bank_checking_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:checkbook',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Rando Bank_Checking_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Bank Checking Balance',
      'icon': 'mdi:checkbook',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_bank_checking_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.02',
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_bank_checking_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Rando Bank_Checking_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Bank Checking Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_bank_checking_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-17T11:21:05+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_bank_checking_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Rando Bank_Checking_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_bank_checking_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Bank Checking First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_bank_checking_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:32:33+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_brokerage_brokerage_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:chart-line',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Rando Brokerage_Brokerage_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'base64Nonce',
      'friendly_name': 'Rando Brokerage Brokerage Balance',
      'icon': 'mdi:chart-line',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_brokerage_brokerage_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1000.5',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_brokerage_brokerage_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Rando Brokerage_Brokerage_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Brokerage Brokerage Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_brokerage_brokerage_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-05-26T00:56:41+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_brokerage_brokerage_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Rando Brokerage_Brokerage_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_brokerage_brokerage_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Brokerage Brokerage First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_brokerage_brokerage_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:32:33+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_credit_credit_card_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:credit-card-outline',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Rando Credit_Credit Card_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Credit Credit Card Balance',
      'icon': 'mdi:credit-card-outline',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_credit_credit_card_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-200.0',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_credit_credit_card_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Rando Credit_Credit Card_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Credit Credit Card Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_credit_credit_card_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2022-12-10T18:17:06+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_credit_credit_card_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Rando Credit_Credit Card_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_credit_credit_card_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Credit Credit Card First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_credit_credit_card_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:33:46+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_employer_investments_401_k_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:chart-line',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Rando Employer Investments_401.k_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Employer Investments 401.k Balance',
      'icon': 'mdi:chart-line',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_employer_investments_401_k_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100000.35',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_employer_investments_401_k_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Rando Employer Investments_401.k_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Employer Investments 401.k Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_employer_investments_401_k_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-17T08:13:10+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_employer_investments_401_k_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Rando Employer Investments_401.k_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_employer_investments_401_k_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via FINICITY',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Employer Investments 401.k First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_employer_investments_401_k_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:41:54+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_investments_roth_ira_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:chart-line',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Rando Investments_Roth IRA_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Investments Roth IRA Balance',
      'icon': 'mdi:chart-line',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_investments_roth_ira_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10000.43',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_investments_roth_ira_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Rando Investments_Roth IRA_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Investments Roth IRA Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_investments_roth_ira_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-17T13:32:21+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_investments_roth_ira_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Rando Investments_Roth IRA_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_investments_roth_ira_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Investments Roth IRA First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_investments_roth_ira_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:35:59+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.rando_mortgage_mortgage_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:home-city-outline',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Rando Mortgage_Mortgage_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Rando Mortgage Mortgage Balance',
      'icon': 'mdi:home-city-outline',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_mortgage_mortgage_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_mortgage_mortgage_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Rando Mortgage_Mortgage_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Mortgage Mortgage Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_mortgage_mortgage_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2023-08-16T01:41:36+00:00',
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.rando_mortgage_mortgage_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Rando Mortgage_Mortgage_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.rando_mortgage_mortgage_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via PLAID',
      'device_class': 'timestamp',
      'friendly_name': 'Rando Mortgage Mortgage First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.rando_mortgage_mortgage_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:45:25+00:00',
  })
# ---
# name: test_all_entities[sensor.zillow_house_balance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.zillow_house_balance',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.MONETARY: 'monetary'>,
    'original_icon': 'mdi:cash',
    'original_name': 'Balance',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'balance',
    'unique_id': 'Zillow_House_balance',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.zillow_house_balance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via zillow',
      'device_class': 'monetary',
      'entity_picture': 'data:image/png;base64,base64Nonce',
      'friendly_name': 'Zillow House Balance',
      'icon': 'mdi:cash',
      'state_class': <SensorStateClass.TOTAL: 'total'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zillow_house_balance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '123000.0',
  })
# ---
# name: test_all_entities[sensor.zillow_house_data_age-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zillow_house_data_age',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'Data age',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'age',
    'unique_id': 'Zillow_House_age',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.zillow_house_data_age-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via zillow',
      'device_class': 'timestamp',
      'friendly_name': 'Zillow House Data age',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zillow_house_data_age',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-02-12T09:00:25+00:00',
  })
# ---
# name: test_all_entities[sensor.zillow_house_first_sync-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.zillow_house_first_sync',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TIMESTAMP: 'timestamp'>,
    'original_icon': None,
    'original_name': 'First sync',
    'platform': 'monarchmoney',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'created',
    'unique_id': 'Zillow_House_created',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[sensor.zillow_house_first_sync-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'attribution': 'Data provided by Monarch Money API via zillow',
      'device_class': 'timestamp',
      'friendly_name': 'Zillow House First sync',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.zillow_house_first_sync',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2021-10-15T01:39:29+00:00',
  })
# ---
